@@ -80,6 +80,9 @@ class Towns
 			return NULL;
 		}
 
+		TownMap::const_iterator getFirstTown() const {return townMap.begin();}
+		TownMap::const_iterator getLastTown() const {return townMap.end();}
+
 	private:
 		TownMap townMap;
 };
