@@ -152,12 +152,19 @@
 			getTotalGold(cid)
 			doPlayerPay(cid, cost)
 			unregisterCreatureEvent(cid, name)
+			db.query(query) (previously known as db.executeQuery)
 			db.stringComparer()
 			db.connected()
 			db.tableExists(name)
 			db.transBegin()
 			db.transRollback()
 			db.transCommit()
+			errors(var)
+			getPlayerTradeState(cid)
+			getPlayerModes(cid)
+			getTownList()
+			doPlayerFollowCreature(cid, target)
+			doPlayerLeaveParty(cid[, forced = false])
 		* Add new creature events onMoveItem(moveItem, frompos, position, cid). (Elf Tryller)
 		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Clean actions, movements and weapons scripts to work only with 7.9 items. (Tryller)
